[tool.poetry]
name = "oiwa"
version = "0.1.0"
description = ""
authors = ["Anonymous"]

[tool.poetry.dependencies]
python = "3.9.*"
fastapi = "^0.65.1"
python-telegram-bot = "^13.5"
black = "^21.5b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
